...

@Composable
fun TheraPet(navController: NavHostController) {

    NavHost(
        navController = navController,
        startDestination = "welcome_screen"
    ) {
        composable("welcome_screen") {
            WelcomeScreen(
                onRegisterNav = { navController.navigate("register") },
                onLoginNav = { navController.navigate("login") }
            )
...
                onBack = { navController.popBackStack() }
            )
        }
        composable("login") {
            LoginScreen(
                onRegisterNav = {navController.navigate("register")},
                onLogin = {navController.navigate("home_screen")},
                onBack = {navController.popBackStack()}
            )
        }
        composable("create_pet") {
            CreatePetScreen(
                onCreatePet = {navController.navigate("home_screen")}
...
                navController.navigate("welcome_screen") {
                    popUpTo("home_screen") { inclusive = true }
                    launchSingleTop = true
                }
            },
                onProfile = {
                    navController.navigate("profile_screen")
                            },

                onSettings = {
                    navController.navigate("settings_screen")
                },

                //TODO: Add notifs screen
                onNotifs = {
                    navController.navigate("")
                },

                onAppts = {
                    navController.navigate("appointments_screen")
                },

                onBookAppt = { navController.navigate("choose_therapist_screen")}
            )
        }

        composable("appointments_screen"){
            AppointmentsScreen(onBack = {navController.popBackStack()},
                onBookAppt = {navController.navigate("book_appointment_screen")})
        }

        composable("settings_screen"){
            SettingsScreen(onBack = {navController.popBackStack()},
                onPetSettings = {navController.navigate("pet_settings_screen")},
                onPrivacyPolicy = {navController.navigate("privacy_policy_screen")},
                onHelpSupport = {navController.navigate("help_support_screen")},
                onDeleteAccount = {navController.navigate("delete_account_screen")})
        }

        composable("choose_therapist_screen"){
            ChooseTherapistScreen(onBack = {navController.popBackStack()
            },
                onContinue = {navController.navigate("book_appointment_screen")})
...
            )
        }

        composable("profile_screen") {
            ProfileScreen(
                onBack = {navController.popBackStack()},
                onEditPassword = {navController.navigate("reset_password_screen")}
            )
        }

        composable("reset_password_screen"){
            ResetPasswordScreen(
                onBack = {navController.popBackStack()},
...
            )
        }

        composable("delete_account_screen"){
            DeleteAccountScreen(
                onBack = {navController.popBackStack()},
                onContinue = {navController.navigate("delete_account_confirm_screen")}
            )
        }

        composable("delete_account_confirm_screen"){
            DeleteAccountConfirmScreen(
                onBack = {navController.popBackStack()},
...
