...
fun PetSettingsButton(onClick: () -> Unit){
    MyOutlinedButton(
        onClick = onClick,
        text = "Pet Settings",
        modifier = Modifier
            .padding(top = 20.dp)
            .testTag("pet_settings_button")
            .height(60.dp)
            .fillMaxWidth()
    )
}

//Security button
...
fun PrivacyButton(onClick: () -> Unit){
    MyOutlinedButton(
        onClick = onClick,
        text = "Privacy policy",
        modifier = Modifier
            .padding(top = 20.dp)
            .testTag("privacy_policy_button")
            .height(60.dp)
            .fillMaxWidth()
    )
}

@Composable
...
fun HelpSupportButton(onClick: () -> Unit){
    MyOutlinedButton(
        onClick = onClick,
        text = "Help & Support",
        modifier = Modifier
            .padding(top = 20.dp)
            .testTag("help_support_button")
            .height(60.dp)
            .fillMaxWidth()
    )
}

// Delete account button
...
fun DeleteAccountNavButton(onClick: () -> Unit){
    MyFilledTonalButton(
        onClick = onClick,
        text = "Delete Account",
        modifier = Modifier
            .padding(top = 20.dp)
            .testTag("delete_account_button")
            .height(60.dp)
            .fillMaxWidth(),
        containerColor = MaterialTheme.colorScheme.errorContainer,
        contentColor = MaterialTheme.colorScheme.onErrorContainer
    )
}
...
